tests/cases_invalid/unexpected_end_of_file/.expected
error: unexpected end of file
 --> ./cases_invalid/unexpected_end_of_file/main.shd:1:2
  |
1 | fn
  |  ^ here
  |
